--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hagb4rd/ini2json.git"
+    "url": "https://github.com/hagb4rd/ini2json"
   },
   "dependencies": {
     "ini": "^1.3.4",
